fix image full size overflowing out of content area and fix some alignment issues

--- a/styles/global.css
+++ b/styles/global.css
@@ -234,8 +234,8 @@ h2, h3 { page-break-after: avoid; }
 .alignleft,
 .alignright,
 .alignfull {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+  /*padding-left: 0 !important;*/
+  /*padding-right: 0 !important;*/
 }
 
 .alignfull{
